Final changes done

--- a/index.html
+++ b/index.html
@@ -33,20 +33,20 @@
     <div class="container">
         <div class="row main mt-5">
             <div class="d-flex flex-column mt-5 col-12">
-                <div class="bd-highlight"><p>#welcome</p></div>
-                <div class="bd-highlight"><h1>DEEPAKSHI SOOD <br>
+                <div class="bd-highlight"><p style="color: #FF8C00;">#welcome</p></div>
+                <div class="bd-highlight"><h1><b>DEEPAKSHI SOOD</b><br>
                 Student & Developer
                 </h1></div>
                 <div class="col-lg-12 d-flex flex-wrap">
-                  <div class="SkillGrid"><i class="fab fa-linkedin"></i></div>
-                  <div class="SkillGrid"><i class="fas fa-envelope"></i></div>
-                  <div class="SkillGrid"><i class="fab fa-medium"></i></div>
-                  <div class="SkillGrid"><i class="fab fa-twitter-square"></i></div>
+                  <div class="SkillGrid"><i class="fab fa-linkedin" style="color: #FF8C00;"></i></div>
+                  <div class="SkillGrid"><i class="fas fa-envelope" style="color: #FF8C00;"></i></div>
+                  <div class="SkillGrid"><i class="fab fa-medium" style="color: #FF8C00;"></i></div>
+                  <div class="SkillGrid"><i class="fab fa-twitter-square" style="color: #FF8C00;"></i></div>
                 </div>
                 <hr>
             </div>
             <div class="col-lg-8 col-sm-12 mt-5">
-                <p>about me</p>
+                <p style="color: #FF8C00;">#about_me</p>
                 <p> I describe myself as an enthusiastic individual with a never-ending quench for learning. 
                     I am intrigued by technology and enjoy working with new teams and always look for opportunities 
                     to expand my knowledge. I am interested in Web Developement, SQL, PowerBI, Analytics, Competitive Programming, 
@@ -56,20 +56,20 @@
             <div class="col-lg-4 col-md-12 mt-5"> 
                 <div class="d-flex flex-row mt-3">
                     <div class="col-12 mb-5 d-flex justify-content-center">
-                        <i class="fas fa-print fa-4x"></i>
-                        <p class="ml-5 d-flex align-items-end"><a href="https://drive.google.com/file/d/14imZXdOOpq5PezducYnRqaC8ZL9xdjmB/view?usp=sharing"> Resume</a></p>
+                        <i class="fas fa-print fa-4x" style="color: #FF8C00;"></i>
+                        <p class="ml-5 d-flex align-items-end"><a href="https://drive.google.com/file/d/14imZXdOOpq5PezducYnRqaC8ZL9xdjmB/view?usp=sharing" style="color: black;"> Resume</a></p>
                     </div>
                 </div>
                 <div class="d-flex flex-row">
                     <div class="col-12 mb-5 d-flex justify-content-center">
-                        <i class="fab fa-github fa-4x"></i>
-                        <p class="ml-5 d-flex align-items-end"><a href="https://github.com/deepakshisud"> Github</a></p>
+                        <i class="fab fa-github fa-4x" style="color: #FF8C00;"></i>
+                        <p class="ml-5 d-flex align-items-end"><a href="https://github.com/deepakshisud" style="color: black;"> Github</a></p>
                     </div>
                 </div>
             </div>
             <div class="col-lg-12 col-md-12">
               <a name="skills"></a>
-                <p>my skills</p>
+                <p style="color: #FF8C00;">#my_skills</p>
                 <div class="d-flex flex-row">
                   <div class="col-md-12 mb-2 d-flex justify-content-around mt-3">
                       <i class="fas fa-laptop-code fa-4x"></i>
@@ -116,12 +116,12 @@
                   </div>
             <div class="col-12 mt-3">
               <a name="education"></a>
-              <p>my education</p>
+              <p style="color: #FF8C00;">#my_education</p>
               <div class="row row-cols-1 row-cols-md-2 g-4">
                 <div class="col py-4">
                   <div class="card h-100">
                     <div class="card-body">
-                      <h5 class="card-title">Vellore Institute of Technology, Chennai</h5>
+                      <h5 class="card-title" style="color: #FF8C00;">Vellore Institute of Technology, Chennai</h5>
                       <p class="card-text">I am currently completing my bachelors in Electronics 
                         and Computer Engineering. I currently have a CGPA of 9.47. I will be
                         graduating in the year 2022.</p>
@@ -131,7 +131,7 @@
                 <div class="col py-4">
                   <div class="card h-100">
                     <div class="card-body">
-                      <h5 class="card-title">Mount Carmel Sr. Src. School, Palampur</h5>
+                      <h5 class="card-title" style="color: #FF8C00;">Mount Carmel Sr. Src. School, Palampur</h5>
                       <p class="card-text">I completed my high school with a score of 93.6% in Science Non Medical. I 
                         was honored to be the Sports Captain and the Flag bearer for the school for the year 2017-18.</p>
                     </div>
@@ -140,7 +140,7 @@
               </div>
             </div>
             <div class="col-12 mt-3">
-            <p>my projects</p>
+            <p style="color: #FF8C00;">#my_projects</p>
             <div class="row row-cols-1 row-cols-md-3 g-4">
               <div class="col px-0 py-4">
                 <div class="card h-100 mx-3" onclick="window.location.href = 'https://find-a-place.herokuapp.com/';">
@@ -172,20 +172,21 @@
                 </div>
               </div>
               <div class="col px-0 py-4">
-                <div class="card h-100 mx-3" onclick="window.location.href = 'https://github.com/deepakshisud/Arduino-Based-Multimeter';">
-                  <img src="images/Arduino-based-multimeter.png" class="card-img-top" alt="...">
+                <div class="card h-100 mx-3" onclick="window.location.href = 'https://young-beach-68426.herokuapp.com/';">
+                  <img src="images/Class-forum.png" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <p class="card-text">An integrated version of the AVO meter for current, voltage and resistance and LC 
-                      meter to measure capacitance and resistance.</p>
+                    <p class="card-text">A discussion forum website that can be integrated into MS Teams for students or organizations. 
+                      Build using Express.js, MongoDB, hosted on Heroku and integrated into Microsoft Teams using App Studio</p>
                   </div>
                 </div>
               </div>
               <div class="col px-0 py-4">
                 <div class="card h-100 mx-3" onclick="window.location.href = 'https://github.com/deepakshisud/Javascript-Breakout-Game';">
-                  <img src="images/breakout-game.PNG" class="card-img-top" alt="...">
+                  <img src="images/safety-pin.png" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <p class="card-text">A web based Breakout Game made using core Javascript and HTML Canvas. Styled using Bulma
-                      framework</p>
+                    <p class="card-text">A web based Safety website that allows you to add locations to places with their safety indexes,
+                      a picture and a description. Users can comment on these places and add review ratings. Built with Express.js
+                    </p>
                   </div>
                 </div>
               </div>
@@ -204,7 +205,7 @@
             </div>
             <div class="col-lg-12 col-sm-12 mt-5">
               <a name="experience"></a>
-              <p>my experience and contributions</p>
+              <p style="color: #FF8C00;">#my_experience_and_contributions</p>
             </div>
             <div class="col-lg-2 col-md-12 mt-3 px-0" id="hidden"> 
               <div class="d-flex flex-row" id="hidden">
