Final changes done

--- a/index.html
+++ b/index.html
@@ -227,9 +227,10 @@
             </div>
           </div>
           <div class="col-lg-10 col-sm-12 pl-0 mt-4">
-            <p>SWE Intern at JP Morgan</p>
-            <p> I am an upcoming intern at JP Morgan Chase and Co. I bagged this internship through their
-              yearly hackathon "Code for Good", competing with almost 500 students from all over India.
+            <p>SEP Intern at JP Morgan</p>
+            <p> I worked as a Software Engineering Program Intern at JP Morgan Chase and Co. I bagged this internship through their
+              yearly hackathon "Code for Good", competing with almost 500 students from all over India. I worked on a ML based project 
+              focusing on Time Series Forecasting specifically and creating API for the same.
             </p>
           </div>
           <div class="col-lg-2 col-md-12 px-0" id="hidden"> 
